test/pass/special0.min
program
    array x := 0;
    string y := 0
start
end

