test/fail/addr2.min
program
    number x;
    string y := "hello"
start
    x := &y;
end
